# arena-test

./: .gitignore  README.md  embed.py  preprocess.py  pyproject.toml  vectordb.py
data/ppt/: Nike Air Max Ignite Launch Strategy.pptx  Oceans in Peril_ Climate Change Impacts.pptx
notebooks/: ad_creative_demo.ipynb  embed_multimodal.ipynb  native_video_embedding.ipynb  qwen_embedding_pipeline.ipynb
